--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="container">
                 <a href="index.html"><img class="fotologo" src="assets/favicon.ico" alt=""></a>
                 <div> 
-                    <a class="btn btn-primary" href="/login">Login</a>
-                    <a class="btn" href="/sigin">Inscrever-se</a>
+                    <a class="btn btn-primary" href="login.html">Login</a>
+                    <a class="btn" href="sigin.html">Inscrever-se</a>
                 </div>
             </div>
         </nav>
