--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <form action="/login" method="post" autocomplete="off">
+                        <form action="index.html" method="post" autocomplete="off">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="email" id="text" placeholder="E-Mail">
                             </div>
@@ -43,7 +43,7 @@
                             </div>
                             <br>
                             <button type="submit" id="sendlogin" class="btn btn-primary">Login</button>
-                            <a href="/sigin"><button type="button" id="sendlogin" class="btn">Inscrever-se</button></a>
+                            <a href="sigin.html"><button type="button" id="sendlogin" class="btn">Inscrever-se</button></a>
                             
                         </form>
                     </div>
