--- a/sigin.html
+++ b/sigin.html
@@ -33,7 +33,7 @@
             <div class="col-4">
                 <div class="card">
                     <div class="card-body">
-                        <form action="/sigin" method="post" autocomplete="off">
+                        <form action="index.html" method="post" autocomplete="off">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="text" name="nome" placeholder="Nome">
                             </div>
@@ -63,7 +63,7 @@
                             </div>
                             <br>
                             <button type="submit" id="sendlogin" class="btn btn-primary">Inscrever-se</button>
-                            <a href="/login"><button type="button" id="sendlogin" class="btn">Login</button></a>
+                            <a href="login.html"><button type="button" id="sendlogin" class="btn">Login</button></a>
                             
                         </form>
                     </div>
